0.3.6
=====
- [feature] Added year, month, day, hour, minute, second
  variables to file_template.  #59

- [feature] Added 'primary' to the list of constraint types
  recognized for MySQL drop_constraint().

- [feature] Added --sql argument to the "revision" command,
  for the use case where the "revision_environment"
  config option is being used but SQL access isn't
  desired.

- [bug] 'alembic' command reports an informative
  error message when the configuration is missing
  the 'script_directory' key.  #63

- [bug] Fixes made to the constraints created/dropped
  alongside so-called "schema" types such as
  Boolean and Enum.  The create/drop constraint logic
  does not kick in when using a dialect that doesn't
  use constraints for these types, such as postgresql,
  even when existing_type is specified to
  alter_column().  Additionally, the constraints
  are not affected if existing_type is passed but
  type_ is not, i.e. there's no net change
  in type.  #62

0.3.5
=====
- [bug] Fixed issue whereby reflected server defaults
  wouldn't be quoted correctly; uses repr() now.
  #31

- [bug] Fixed issue whereby when autogenerate would
  render create_table() on the upgrade side for a
  table that has a Boolean type, an unnecessary
  CheckConstraint() would be generated. #58

- [feature] Implemented SQL rendering for
  CheckConstraint() within autogenerate upgrade,
  including for literal SQL as well as SQL Expression
  Language expressions.

0.3.4
=====
- [bug] Fixed command-line bug introduced by the
  "revision_environment" feature.

0.3.3
=====
NOTE: 0.3.3 was released with a command line bug,
so please skip right to 0.3.4

- [feature] New config argument
  "revision_environment=true", causes env.py to
  be run unconditionally when the "revision" command
  is run, to support script.py.mako templates with
  dependencies on custom "template_args".

- [feature] Added "template_args" option to configure()
  so that an env.py can add additional arguments